--- a/index.html
+++ b/index.html
@@ -85,18 +85,20 @@
                 </div>
             </div>
 
-            <div class="navbar-actions">
-                <button id="btn-refresh" class="btn btn-ghost btn-icon" title="تحديث">
-                    <i data-lucide="refresh-cw" class="w-4 h-4"></i>
-                </button>
-                <button id="btn-settings" class="btn btn-ghost btn-icon" title="الإعدادات">
-                    <i data-lucide="settings" class="w-4 h-4"></i>
-                </button>
-                <button id="btn-theme" class="btn btn-ghost btn-icon" title="تبديل الوضع">
-                    <i data-lucide="sun" class="w-4 h-4 hidden dark:block"></i>
-                    <i data-lucide="moon" class="w-4 h-4 block dark:hidden"></i>
-                </button>
-            </div>
+            <a href="stats.html" class="btn btn-ghost btn-icon" title="الإحصائيات">
+                <i data-lucide="bar-chart-3" class="w-4 h-4"></i>
+            </a>
+            <button id="btn-refresh" class="btn btn-ghost btn-icon" title="تحديث">
+                <i data-lucide="refresh-cw" class="w-4 h-4"></i>
+            </button>
+            <button id="btn-settings" class="btn btn-ghost btn-icon" title="الإعدادات">
+                <i data-lucide="settings" class="w-4 h-4"></i>
+            </button>
+            <button id="btn-theme" class="btn btn-ghost btn-icon" title="تبديل الوضع">
+                <i data-lucide="sun" class="w-4 h-4 hidden dark:block"></i>
+                <i data-lucide="moon" class="w-4 h-4 block dark:hidden"></i>
+            </button>
+        </div>
         </div>
     </nav>
 
